--- a/KGCA41/CreateTextrue_2/CreateTexture_2.vcxproj.filters
+++ b/KGCA41/CreateTextrue_2/CreateTexture_2.vcxproj.filters
@@ -18,5 +18,6 @@
     <ClInclude Include="TObject.h" />
     <ClInclude Include="TStd.h" />
     <ClInclude Include="TWindow.h" />
+    <ClInclude Include="DirectXTex.h" />
   </ItemGroup>
 </Project>
