--- a/KGCA41/CreateRenderObject/CreateRenderObject.vcxproj
+++ b/KGCA41/CreateRenderObject/CreateRenderObject.vcxproj
@@ -152,6 +152,7 @@
     <ClCompile Include="Sample.cpp" />
     <ClCompile Include="TCore.cpp" />
     <ClCompile Include="TDevice.cpp" />
+    <ClCompile Include="TInput.cpp" />
     <ClCompile Include="TMath.cpp" />
     <ClCompile Include="TObject.cpp" />
     <ClCompile Include="TPlaneObj.cpp" />
@@ -166,6 +167,7 @@
     <ClInclude Include="TCollision.h" />
     <ClInclude Include="TCore.h" />
     <ClInclude Include="TDevice.h" />
+    <ClInclude Include="TInput.h" />
     <ClInclude Include="TMath.h" />
     <ClInclude Include="TObject.h" />
     <ClInclude Include="TPlaneObj.h" />
