--- a/KGCA41/CreateRenderObject/CreateRenderObject.vcxproj
+++ b/KGCA41/CreateRenderObject/CreateRenderObject.vcxproj
@@ -150,12 +150,14 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Sample.cpp" />
+    <ClCompile Include="TCamera.cpp" />
     <ClCompile Include="TCore.cpp" />
     <ClCompile Include="TDevice.cpp" />
     <ClCompile Include="TInput.cpp" />
     <ClCompile Include="TMath.cpp" />
     <ClCompile Include="TObject.cpp" />
     <ClCompile Include="TPlaneObj.cpp" />
+    <ClCompile Include="TPlayer.cpp" />
     <ClCompile Include="TShaderMgr.cpp" />
     <ClCompile Include="TTextureMgr.cpp" />
     <ClCompile Include="TTimer.cpp" />
@@ -164,6 +166,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Sample.h" />
+    <ClInclude Include="TCamera.h" />
     <ClInclude Include="TCollision.h" />
     <ClInclude Include="TCore.h" />
     <ClInclude Include="TDevice.h" />
@@ -171,6 +174,7 @@
     <ClInclude Include="TMath.h" />
     <ClInclude Include="TObject.h" />
     <ClInclude Include="TPlaneObj.h" />
+    <ClInclude Include="TPlayer.h" />
     <ClInclude Include="TShaderMgr.h" />
     <ClInclude Include="TStd.h" />
     <ClInclude Include="TTextureMgr.h" />
