--- a/KGCA41/CreateRenderObject/CreateRenderObject.vcxproj
+++ b/KGCA41/CreateRenderObject/CreateRenderObject.vcxproj
@@ -153,8 +153,10 @@
     <ClCompile Include="TCamera.cpp" />
     <ClCompile Include="TCore.cpp" />
     <ClCompile Include="TDevice.cpp" />
+    <ClCompile Include="TDxObject.cpp" />
     <ClCompile Include="TInput.cpp" />
     <ClCompile Include="TMath.cpp" />
+    <ClCompile Include="TNpcObj.cpp" />
     <ClCompile Include="TObject.cpp" />
     <ClCompile Include="TPlaneObj.cpp" />
     <ClCompile Include="TPlayer.cpp" />
@@ -170,8 +172,10 @@
     <ClInclude Include="TCollision.h" />
     <ClInclude Include="TCore.h" />
     <ClInclude Include="TDevice.h" />
+    <ClInclude Include="TDxObject.h" />
     <ClInclude Include="TInput.h" />
     <ClInclude Include="TMath.h" />
+    <ClInclude Include="TNpcObj.h" />
     <ClInclude Include="TObject.h" />
     <ClInclude Include="TPlaneObj.h" />
     <ClInclude Include="TPlayer.h" />
