--- a/KGCA41/TCoreLib/TCoreLib.vcxproj.filters
+++ b/KGCA41/TCoreLib/TCoreLib.vcxproj.filters
@@ -69,6 +69,9 @@
     <ClInclude Include="TWindow.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="TWriter.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="DirectXTex.inl">
@@ -125,6 +128,9 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="TWindow.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="TWriter.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
