--- a/KGCA41/SampleSplite_02/SampleSplite_02.vcxproj.filters
+++ b/KGCA41/SampleSplite_02/SampleSplite_02.vcxproj.filters
@@ -18,10 +18,19 @@
     <ClInclude Include="Sample.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="TSpriteObj.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Sample.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="TSpriteObj.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <FxCompile Include="..\..\res\shader\PlaneMask.hlsl" />
   </ItemGroup>
 </Project>
