--- a/KGCA41/TCoreLib/TCoreLib.vcxproj.filters
+++ b/KGCA41/TCoreLib/TCoreLib.vcxproj.filters
@@ -72,6 +72,9 @@
     <ClInclude Include="TWriter.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="TSpriteObj.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="DirectXTex.inl">
@@ -131,6 +134,9 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="TWriter.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="TSpriteObj.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
