--- a/KGCA41/TCoreLib/TCoreLib.vcxproj.filters
+++ b/KGCA41/TCoreLib/TCoreLib.vcxproj.filters
@@ -75,6 +75,12 @@
     <ClInclude Include="TSpriteObj.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="TSoundMgr.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="ICoreStd.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="DirectXTex.inl">
@@ -137,6 +143,12 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="TSpriteObj.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="TSoundMgr.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="ICoreStd.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
