--- a/KGCA41/SampleScene_0/SampleScene_0.vcxproj
+++ b/KGCA41/SampleScene_0/SampleScene_0.vcxproj
@@ -21,32 +21,32 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{53be47c5-7369-4ee9-a6f9-36d999ea52c9}</ProjectGuid>
-    <RootNamespace>TCoreLib</RootNamespace>
+    <ProjectGuid>{af5a0110-bedf-494c-aaf0-c088182246a3}</ProjectGuid>
+    <RootNamespace>SampleScene_0</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
-    <ConfigurationType>StaticLibrary</ConfigurationType>
+    <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <PlatformToolset>v142</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
-    <ConfigurationType>StaticLibrary</ConfigurationType>
+    <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <PlatformToolset>v142</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
-    <ConfigurationType>StaticLibrary</ConfigurationType>
+    <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <PlatformToolset>v142</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
-    <ConfigurationType>StaticLibrary</ConfigurationType>
+    <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <PlatformToolset>v142</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
@@ -78,8 +78,8 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
-    <OutDir>../../output/Debug</OutDir>
-    <IntDir>../../output/Debug/TCoreLib</IntDir>
+    <OutDir>../../output/Debug/</OutDir>
+    <IntDir>../../output/Debug/SampleScene_0</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
@@ -88,12 +88,11 @@
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>WIN32;_DEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN32;_DEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
     </ClCompile>
     <Link>
-      <SubSystem>
-      </SubSystem>
+      <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
   </ItemDefinitionGroup>
@@ -103,12 +102,11 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>WIN32;NDEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN32;NDEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
     </ClCompile>
     <Link>
-      <SubSystem>
-      </SubSystem>
+      <SubSystem>Windows</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
@@ -118,21 +116,15 @@
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>_DEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>_DEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>../../FMOD/Inc;</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>../../TCoreLib/include;</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
-      <SubSystem>
-      </SubSystem>
+      <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalLibraryDirectories>../../TCoreLib/lib;</AdditionalLibraryDirectories>
     </Link>
-    <PostBuildEvent>
-      <Command>copy "*.h" "..\\..\\TCoreLib\\include"
-copy "*.inl" "..\\..\\TCoreLib\\include"
-copy "..\\..\\output\\TCoreLib.lib" "..\\..\\TCoreLib\\lib"
-copy "..\\..\\FMOD\lib\\x64\\fmod.dll" "..\\..\\output\\Deubg"</Command>
-    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
@@ -140,72 +132,28 @@ copy "..\\..\\FMOD\lib\\x64\\fmod.dll" "..\\..\\output\\Deubg"</Command>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>NDEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>NDEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
     </ClCompile>
     <Link>
-      <SubSystem>
-      </SubSystem>
+      <SubSystem>Windows</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="DirectXTex.h" />
-    <ClInclude Include="ICoreStd.h" />
-    <ClInclude Include="TCamera.h" />
-    <ClInclude Include="TCollision.h" />
-    <ClInclude Include="TCore.h" />
-    <ClInclude Include="TDevice.h" />
-    <ClInclude Include="TDxObject.h" />
-    <ClInclude Include="TInput.h" />
-    <ClInclude Include="TMath.h" />
-    <ClInclude Include="TNpcObj.h" />
-    <ClInclude Include="TObject.h" />
-    <ClInclude Include="TPlaneObj.h" />
-    <ClInclude Include="TPlayer.h" />
-    <ClInclude Include="TShaderMgr.h" />
-    <ClInclude Include="TSoundMgr.h" />
-    <ClInclude Include="TSpriteObj.h" />
-    <ClInclude Include="TStd.h" />
-    <ClInclude Include="TTextureMgr.h" />
-    <ClInclude Include="TTimer.h" />
-    <ClInclude Include="TUtils.h" />
-    <ClInclude Include="TWindow.h" />
-    <ClInclude Include="TWriter.h" />
+    <ClInclude Include="Sample.h" />
+    <ClInclude Include="TScene.h" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="DirectXTex.inl" />
+    <ClCompile Include="Sample.cpp" />
+    <ClCompile Include="TScene.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <Library Include="DirectXTex.lib" />
-  </ItemGroup>
-  <ItemGroup>
-    <FxCompile Include="Plane.hlsl">
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
-    </FxCompile>
-  </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="ICoreStd.cpp" />
-    <ClCompile Include="TCamera.cpp" />
-    <ClCompile Include="TCore.cpp" />
-    <ClCompile Include="TDevice.cpp" />
-    <ClCompile Include="TDxObject.cpp" />
-    <ClCompile Include="TInput.cpp" />
-    <ClCompile Include="TMath.cpp" />
-    <ClCompile Include="TNpcObj.cpp" />
-    <ClCompile Include="TObject.cpp" />
-    <ClCompile Include="TPlaneObj.cpp" />
-    <ClCompile Include="TPlayer.cpp" />
-    <ClCompile Include="TShaderMgr.cpp" />
-    <ClCompile Include="TSoundMgr.cpp" />
-    <ClCompile Include="TSpriteObj.cpp" />
-    <ClCompile Include="TTextureMgr.cpp" />
-    <ClCompile Include="TTimer.cpp" />
-    <ClCompile Include="TUtils.cpp" />
-    <ClCompile Include="TWindow.cpp" />
-    <ClCompile Include="TWriter.cpp" />
+    <ProjectReference Include="..\TCoreLib\TCoreLib.vcxproj">
+      <Project>{53be47c5-7369-4ee9-a6f9-36d999ea52c9}</Project>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
