--- a/KGCA41/SampleMap/SampleMap.vcxproj
+++ b/KGCA41/SampleMap/SampleMap.vcxproj
@@ -146,11 +146,13 @@
     <ClInclude Include="Sample.h" />
     <ClInclude Include="TDebugCamera.h" />
     <ClInclude Include="TMap.h" />
+    <ClInclude Include="TQuadtree.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Sample.cpp" />
     <ClCompile Include="TDebugCamera.cpp" />
     <ClCompile Include="TMap.cpp" />
+    <ClCompile Include="TQuadtree.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\TCoreLib\TCoreLib.vcxproj">
