--- a/KGCA41/SampleMap/SampleMap.vcxproj.filters
+++ b/KGCA41/SampleMap/SampleMap.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClInclude Include="TDebugCamera.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="TQuadtree.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Sample.cpp">
@@ -33,6 +36,9 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="TDebugCamera.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="TQuadtree.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
