--- a/KGCA41/SampleFBX_5/SampleFBX_5.vcxproj
+++ b/KGCA41/SampleFBX_5/SampleFBX_5.vcxproj
@@ -146,6 +146,7 @@
     <ClInclude Include="Sample.h" />
     <ClInclude Include="TDebugCamera.h" />
     <ClInclude Include="TFbxImport.h" />
+    <ClInclude Include="TFbxObject.h" />
     <ClInclude Include="TMap.h" />
     <ClInclude Include="TModelMgr.h" />
     <ClInclude Include="TQuadtree.h" />
@@ -156,6 +157,7 @@
     <ClCompile Include="TFbxAnim.cpp" />
     <ClCompile Include="TFbxGeom.cpp" />
     <ClCompile Include="TFbxImport.cpp" />
+    <ClCompile Include="TFbxObject.cpp" />
     <ClCompile Include="TMap.cpp" />
     <ClCompile Include="TModelMgr.cpp" />
     <ClCompile Include="TQuadtree.cpp" />
