--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,8 @@
 /TBasisFBX/Lib/TBasisFBX_d.lib
 /TBasisFBX/Lib/TBasisFBX_d.dll
 /KGCA41/.vs/KGCA42/v16
+/KGCA41/TBasis3DLib/Debug/TBasis3DLib.tlog
+/KGCA41/SampleFBX_5/ClassDiagram.cd
+/TBasisUI/Inc
+/TBasisUI/Lib/TBasisUI_d.lib
+/TBasisUI/Lib/TBasisUI_d.dll
