--- a/KGCA41/SampleFBX_6/SampleFBX_6.vcxproj
+++ b/KGCA41/SampleFBX_6/SampleFBX_6.vcxproj
@@ -169,7 +169,9 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <FxCompile Include="DefaultObj.hlsl" />
+    <FxCompile Include="DefaultObj.hlsl">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+    </FxCompile>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
