--- a/KGCA41/SampleFBX_7/SampleFBX_7.vcxproj
+++ b/KGCA41/SampleFBX_7/SampleFBX_7.vcxproj
@@ -21,7 +21,7 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{705209A1-4B8F-48D9-B286-B23F1456F9C6}</ProjectGuid>
+    <ProjectGuid>{BF7D29B7-0BE2-43F0-B63B-E25B15F786B0}</ProjectGuid>
     <RootNamespace>SampleMap</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
@@ -79,7 +79,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
     <OutDir>../../output/Debug/</OutDir>
-    <IntDir>../../output/Debug/SampleFBX_6</IntDir>
+    <IntDir>../../output/Debug/SampleFBX_7</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
@@ -177,6 +177,9 @@
     <FxCompile Include="DefaultObj.hlsl">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </FxCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="CharacterTable.cit" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
